--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 <body>
 	<div id="page-wrapper">
 		<h1>Admin's Bot Dashboard</h1>
+		<h4>Version 0.0.1 [Early Alpha]</h4>
 
 		<div id="status">Connecting...</div>
+		<div id="key" style="color: blue; padding: 0px;">Session Key: </div>
 
-		<ul id="messages"></ul>
+		<ul id="messages" style="height: 450px; overflow: auto;"></ul>
 
 		<form id="message-form" action="#" method="post">
 			<textarea id="message" placeholder="Write your message here..." required></textarea>
 			<button type="submit">Send Message</button>
-			<button type="button" id="close">Close Connection</button>
+			<button type="button" style="background: #0000ff !important;" id="refresh">Refresh Dashboard</button>
+			<button type="button" style="background: #ff0000 !important;" id="restart">Restart Dashboard</button>
+			<button type="button" style="background: #BABABA !important;" id="close">Close Connection</button>
 		</form>
 	</div>
 
+	<script src="getAllUrlParams.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
